--- a/jsbin.qetinun.1.html
+++ b/jsbin.qetinun.1.html
@@ -12,6 +12,8 @@
   <script src="js/func.js"></script>
   <script src="js/scoreBarre.js"></script>
   <script src="js/level1.js"></script>
+  <script src="js/level2.js"></script>
+  <script src="js/level3.js"></script>
   <script src="js/charactergraph.js"></script>
   <script src="js/donkeyKong.js"></script>
 </head>
