--- a/jsbin.qetinun.1.html
+++ b/jsbin.qetinun.1.html
@@ -14,8 +14,9 @@
   <script src="js/level1.js"></script>
   <script src="js/level2.js"></script>
   <script src="js/level3.js"></script>
-  <script src="js/charactergraph.js"></script>
+  <script src="js/character.js"></script>
   <script src="js/donkeyKong.js"></script>
+  <script src="js/menu.js"></script>
 </head>
 <body>
 <canvas id="myCanvas" width=500 height=500>
